Fix hero title vertical spacing

--- a/style.css
+++ b/style.css
@@ -361,7 +361,7 @@ body {
   font-family: 'Roboto Slab', serif;
   font-size: 5rem;
   letter-spacing: 1.5px;
-  margin-bottom: .5em;
+  margin: .25em 0 .5em;
 }
 .hero__body {
   display: flex;
